# contention-nametag-gles2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSES  Makefile  README  README.md  app.py  configuration.toml  requirements.txt
backend/: .clang-format  .gitignore  README
backend/source/: main.cpp
backend/source/drawers/gl/: fonts.cpp  fonts.hpp  sprite.cpp  texture.hpp  vertex.hpp
backend/source/util/: animationController.cpp  bitmaps.cpp  bitmaps.hpp  io.hpp  netConfigHandler.hpp
backend/source/wrappers/: driver.cpp  egl.hpp  hardware.cpp  openGL.cpp  openGL.hpp
frontend/: README
res/: decoVert.glsl  textFrag.glsl  textVert.glsl  triangle.f.glsl  triangleVert.glsl
res/shaders/: sprite.f.glsl  sprite.v.glsl  text.f.glsl
res/static/: index.html  ui.js
res/templates/: index.html
source/: main.cpp
source/drawers/: drawable.hpp  fonts.cpp  fonts.hpp  sprite.cpp  sprite.hpp  stb_image.cpp  text.cpp  text.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp  vertex.hpp
source/drawers/buffer/: drawer.cpp  drawer.hpp
source/drawers/gl/: decoration.cpp  decoration.hpp  drawable.hpp  fonts.cpp  fonts.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp
source/net/: server.cpp  server.hpp
source/util/: animationController.cpp  animationController.hpp  io.cpp  netConfigHandler.cpp  netConfigHandler.hpp  resourceHandler.cpp  resourceHandler.hpp  time.cpp  time.hpp
source/wrappers/: driver.cpp  driver.hpp  egl.cpp  egl.hpp  hardware.cpp  hardware.hpp  openGL.cpp  openGL.hpp  shader.cpp  shader.hpp
static/: main.css  ui.js
templates/: 404.html  5xx.html  base.html  index.html  template.html
